# MLFE

./: .gitignore  CMakeLists.txt  README.md  dependencies.txt
examples/: CMakeLists.txt  exFirst.cpp
include/lafe/: structure.hpp
modules/glfe/: CMakeLists.txt  operations.cpp
modules/lafe/: CMakeLists.txt  matrixOps.cpp  operations.cpp
tests/: CMakeLists.txt
